--- a/style.css
+++ b/style.css
@@ -1,8 +1,18 @@
-html, body {
+html,
+body {
+  background: black;
   margin: 0;
   padding: 0;
 }
+
 canvas {
   display: block;
-  
+}
+
+main {
+  display: flex;
+  min-height: 100vh;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
 }
